FIX: White background in KWIC improves readability

--- a/_attachments/main.css
+++ b/_attachments/main.css
@@ -3,6 +3,10 @@ body {
   margin: 0; 
 }
 
+pre a {
+  background-color: white; 
+}
+
 #watermark {
   background-image: url(cassandre_background.png); 
   background-position: 100% 0%;
